fix dataview scrollbar

--- a/src/containers/DataView.scss
+++ b/src/containers/DataView.scss
@@ -56,8 +56,9 @@
   }
 
   .TableContainer {
-    width: 95%;
-    overflow-x: scroll;
+    width: 99%;
+    height: 30rem;
+    overflow: scroll;
   }
 
 }
